# chat_converter

./: AGENTS.md  Dockerfile  README.md  check_containers.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test_count.py  test_fetch.py  test_parser.py
.github/workflows/: deploy.yml
output/: 2026-01-21_ai-ad-agency-services.md  2026-01-21_before-you-continue.md  2026-01-21_before-you-continue_1.md  2026-01-21_download-us-app-in-germany.md  2026-01-21_gemini---direct-access-to-google-ai.md  2026-01-21_gemini---direct-access-to-google-ai_1.md  2026-01-21_gemini---direct-access-to-google-ai_2.md  2026-01-21_gemini---direct-access-to-google-ai_3.md  2026-01-21_gemini---direct-access-to-google-ai_4.md  2026-01-21_gemini---direct-access-to-google-ai_5.md  2026-01-21_how-can-i-get-my-model-to-think-like-me.md  2026-01-21_how-can-i-get-my-model-to-think-like-me_1.md  2026-01-21_how-can-i-get-my-model-to-think-like-me_2.md  2026-01-21_how-can-i-get-my-model-to-think-like-me_3.md  2026-01-21_how-can-i-get-my-model-to-think-like-me_4.md  2026-01-21_project-comparison-summary.md
src/: __init__.py  fetcher.py  formatter.py  mcp_server.py  parser.py  server.py
static/: app.js  index.html  styles.css
